bin/testsuite/tests/compiler/src/errors/compiler4770.swg
#global testerror "Err0490"
#test
{
    let if = 0
}